Minimal updates for Java 21